--- a/src/css/blog/_footer.scss
+++ b/src/css/blog/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100vw;
   height: 400px;
-  background: $abstract;
+  background: $red;
   display: flex;
   flex-direction: row;
   justify-content: center;
