--- a/src/css/blog/_nav.scss
+++ b/src/css/blog/_nav.scss
@@ -27,7 +27,7 @@
       li {
         list-style-type: none;
         cursor: pointer;
-        color: $primary;
+        color: $secondary;
         font-size: 1.2rem;
         padding: 0.5rem;
         text-decoration: strike-through;
