--- a/src/css/blog/_config.scss
+++ b/src/css/blog/_config.scss
@@ -1,15 +1,11 @@
-$secondary: #eee;
-$abstract: #222831;
-$background: #ffd369;
-$primary :#393e46;
-
-$red: #d96243;
-// $otherC: #663399;
-
-// Shopping section colors
-// $bg: #23343b;
-// $primary: #fa8d31;
-// $secondary: #94a4a5;
+$abstract: #f1f1f1;
+$background: linear-gradient(
+  to right,
+  #21209c,
+);
+$secondary: #fdb827;
+$primary:#21209c;
+$red: #23120b;
 
 @mixin border($color) {
   border: 2px solid transparent;
