--- a/src/css/blog/_logo.scss
+++ b/src/css/blog/_logo.scss
@@ -10,7 +10,7 @@
 
   h1 {
     padding: 0.3rem;
-    color: $primary;
+    color: $secondary;
     font-size: 2rem;
     b {
       color:$primary;
