--- a/src/css/blog/Homepage/_shopping.scss
+++ b/src/css/blog/Homepage/_shopping.scss
@@ -17,10 +17,18 @@
 
   &__paragraph {
     @include border(red);
-    // padding: 2rem 1rem;
-    width: 500px;
+    width: 350px;
     height: 450px;
     position: relative;
+    left: 50px;
+    margin-left: 100px;
+
+    @include desktop {
+      width: 500px;
+      height: 450px;
+      position: relative;
+      left: 0;
+    }
 
     &__header {
       @include border(blue);
@@ -37,9 +45,14 @@
 
     &__text {
       @include border(blue);
-      width: 500px;
-      height: 150px;
+      width: 300px;
+      height: 250px;
       color: $red;
+      @include desktop {
+        width: 500px;
+      height: 150px;
+        
+      }
     }
   }
   &__button {
@@ -52,9 +65,15 @@
     padding: 2rem 0;
     width: 500px;
     position: relative;
+    left: 100px;
     background: linear-gradient(to right, orange, red);
     border-radius: 0 40px 40px 0;
     box-shadow: 2px 2px 20px 3px lighten(orange, 10%);
+    z-index: -10;
+    @include desktop {
+      position: relative;
+      left: 0px;
+    }
 
     img {
       position: relative;
