--- a/src/css/blog/_footer.scss
+++ b/src/css/blog/_footer.scss
@@ -1,23 +1,39 @@
 .footer {
   width: 100vw;
-  height: 400px;
+  height: 480px;
   background: $red;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  // justify-content: center;
+  // align-items: ;
   position: relative;
   margin: 0vh 0 0 0;
+
+  @include desktop {
+    height: 400px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 0vh 0 0 0;
+  }
 
   &__elem {
     flex-basis: 35%;
     height: 200px;
-    border-right: 1px solid grey;
+    padding: 1rem;
     // border-left: 1px solid grey;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 30px;
+    margin-bottom: 5px;
+    @include border(red);
+    @include desktop {
+      margin-bottom: 0px;
+      border-right: 1px solid grey;
+    }
 
     li {
       width: 200px;
