--- a/src/css/blog/_nav.scss
+++ b/src/css/blog/_nav.scss
@@ -7,21 +7,61 @@
   flex-direction: row;
   justify-content: space-between;
   @include border(pink);
-  padding: 1rem;
+  padding: 0.1rem;
   color: $secondary;
+  #menu-icon {
+    list-style-type:none;
+    width: 300px;
+    height: 80px;
+    padding: 0.3rem;
+    z-index: 100;
+    display: flex;
+    justify-content: flex-end;
+    @include border(blue);
+  }
+  @include desktop {
+    display: flex;
+    width: 100vw;
+    height: 100px;
+    flex-direction: row;
+    justify-content: space-between;
+    @include border(pink);
+    padding: 1rem;
+    color: $secondary;
+  }
 
   &__list {
     @include border(red);
-    width: 650px;
+    width: 350px;
     height: 80px;
     padding: 0.3rem;
+    z-index: 100;
+
+    @include desktop {
+      @include border(red);
+      width: 650px;
+      height: 80px;
+      padding: 0.3rem;
+    }
 
     &__con {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       align-items: flex-start;
-      justify-content: space-around;
+      justify-content: space-between;
       padding: 0.5rem;
+      background: black;
+      z-index: 400;
+
+      @include desktop {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        justify-content: space-around;
+        padding: 0.5rem;
+        background: none;
+        @include border(blue);
+      }
       @include border(blue);
 
       li {
@@ -30,13 +70,12 @@
         color: $secondary;
         font-size: 1.2rem;
         padding: 0.5rem;
-        text-decoration: strike-through;
         transition: border-bottom ease 0.5s;
         margin-right: 1rem;
 
         &:hover {
           color: $secondary;
-          border-bottom: 1px solid $secondary
+          border-bottom: 1px solid $secondary;
         }
         &:focus {
           color: $secondary;
